Correction commandes nécéssitant option utilisateur